# FinNode

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  howto.txt  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1775597884124-d6d2587850c548.mjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
scripts/: make-executable.sh  make-windows-executable.sh
src/: App.svelte  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
