[package]
name = "finnode"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
open = "5"
tauri = { version = "1", features = [ "system-tray", "global-shortcut", "shell-open"] }
fs2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
cairo-rs = { version = "0.15", package = "cairo-rs" }

[features]
custom-protocol = ["tauri/custom-protocol"]
