[package]
name = "finnode"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
open = "5"
tauri = { version = "1", features = ["global-shortcut", "shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
