[package]
name = "finnode"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
tauri-winres = "0.1"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
open = "5"
tauri = { version = "1", features = [ "system-tray", "global-shortcut", "shell-open", "fs-all", "path-all", "protocol-asset", "shell-execute", "window-all"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
fs2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15"
cairo-rs = { version = "0.15", package = "cairo-rs" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
